--- a/css/style.css
+++ b/css/style.css
@@ -100,6 +100,38 @@ body {
     display: inline-block !important;
 }
 
+/*============FEATURES SECTION============*/
+
+.narrow {
+    width: 75%;
+    margin: 0 auto;
+    padding-top: 2rem;
+}
+
+.btn-sm {
+    border-width: medium;
+    border-radius: 0;
+    padding: .5rem 1.1rem;
+    font-size: .9rem;
+    font-weight: 400;
+    text-transform: uppercase;
+    margin: 1rem;
+}
+
+.btn-turquoise {
+    border-color: #1ebba3;
+    background-color: #1ebba3;
+    color: white;
+}
+
+.btn-turquoise:hover,
+.btn-turquoise:focus {
+    border-color: #189582;
+    background-color: #189582;
+    color: white;
+}
+
+
 /*============ BOOTSTRAP BREAK POINTS:
 
 Extra small (xs) devices (portrait phones, less than 576px)
