--- a/css/style.css
+++ b/css/style.css
@@ -190,6 +190,33 @@ h3.heading {
     color: #e9ecef;
 }
 
+/*============PORTFOLIO SECTION============*/
+
+.row.padding {
+    padding: 2rem 0 1rem;
+}
+
+img.example-image {
+    max-width: 100%;
+}
+
+.row.no-padding [class*=col-] {
+    padding: 0;
+}
+
+.portfolio-item img:hover {
+    transform: scale(1.3);
+    cursor: zoom-in;
+}
+
+.portfolio-item img {
+    transition: transform .4s ease;
+}
+
+.portfolio-item {
+    overflow: hidden;
+}
+
 /*============ BOOTSTRAP BREAK POINTS:
 
 Extra small (xs) devices (portrait phones, less than 576px)
