--- a/css/style.css
+++ b/css/style.css
@@ -217,6 +217,60 @@ img.example-image {
     overflow: hidden;
 }
 
+/*============PORTFOLIO SECTION============*/
+
+.pricing-column {
+    background-color: white;
+    padding: 2rem;
+    border-top: .2rem solid #1ebba3;
+    box-shadow: 0 0 .8rem rgba(0, 0, 0, .075);
+    transition: transform .7s ease;
+    overflow: hidden;
+    position: relative;
+}
+
+.pricing-column:hover {
+    transform: scale(1.1);
+}
+
+.pricing-column h3 {
+    padding: 1rem;
+    border-bottom: .1rem solid rgba(0, 0, 0, .1);
+}
+
+.pricing-column p {
+    opacity: .8;
+    margin-top: 1.3rem;
+}
+
+.pricing-column h4 {
+    font-size: 1.1rem;
+    padding: .4rem;
+}
+
+.pricing-column .item {
+    font-weight: 700;
+}
+
+.pricing-column h1 {
+    padding: .8rem 0;
+}
+
+.ribbon {
+    background-color: #6c757d;
+    color: white;
+    width: 10rem;
+    height: 2rem;
+    font-size: .8rem;
+    font-weight: 700;
+    padding-top: .4rem;
+    position: absolute;
+    right: -2.8rem;
+    top: 1.6rem;
+    transform: rotate(45deg);
+    box-shadow: 0 0 .2rem rgba(0, 0, 0, .25);
+}
+
 /*============ BOOTSTRAP BREAK POINTS:
 
 Extra small (xs) devices (portrait phones, less than 576px)
