--- a/css/style.css
+++ b/css/style.css
@@ -345,6 +345,29 @@ img.example-image {
     font-weight: 700;
 }
 
+/*============CLIENTS SECTION============*/
+
+.clients img {
+    width: 100%;
+    height: auto;
+    border-radius: 50%;
+    transition: transform .3s ease;
+}
+
+.clients img:hover {
+    transform: scale(.95);
+}
+
+blockquote .svg-inline--fa {
+    margin: 1rem;
+    color: #1ebba3;
+}
+
+.clients-hr {
+    border-top: .05rem solid #1ebba3;
+}
+
+
 /*============ BOOTSTRAP BREAK POINTS:
 
 Extra small (xs) devices (portrait phones, less than 576px)
